tests/toylang/neg/001437_mutation.toylang
program a = { var a : int do; } .
